# endorsement-server

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  package.json
.github/workflows/: ci.yml
@dflow-protocol/endorsement-client-lib/: package.json
@dflow-protocol/endorsement-client-lib/src/: api-path.ts  client.ts  index.ts  type.ts
@dflow-protocol/endorsement-server/: dev-config.json  dev-config.yaml  package.json  tsconfig.json
@dflow-protocol/endorsement-server/src/: config.ts  context.ts  error.ts  keygen.ts  main.ts  requestEndorser.ts  router.ts  server.ts
client/: LICENSE  package.json  tsconfig.json
client/src/: api-path.ts  type.ts
install/: README.md  docker-compose.yml
install/dflow/ofs-1/: endsMtTJP7W4cHe2szQ4DUTvW9xdtTXtBGtscgXsGsK.json  mnemonic.txt
install/endorsement-server/: config.json
server/: Cargo.toml  Dockerfile
server/script/: format.sh
server/src/: config.rs  endorsement.rs  main.rs  payment_in_lieu.rs  server.rs  trace.rs
server/src/server/: server.rs
typescript/: .dockerignore  .gitignore  .yarnrc  README.md  nx.json  package.json
typescript/.yarn/cache/: @dflow-protocol-signatory-client-lib-0.0.16.tgz  @nrwl-cli-15.0.1.tgz  @nrwl-tao-15.0.1.tgz  @yarnpkg-parsers-3.0.0-rc.26.tgz  nx-15.0.1.tgz  tsc-watch-5.0.3.tgz
typescript/@dflow-protocol/endorsement-client-lib/: package.json
typescript/@dflow-protocol/endorsement-client-lib/src/: api-path.ts  index.ts  type.ts
typescript/@dflow-protocol/endorsement-server/: .eslintrc.js  Dockerfile  dev-config.json  package.json
(+7 files in other folders)
