[package]
name = "endorsement-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
base64 = "0.21.2"
bs58 = "0.5.0"
clap = { version = "4.3.8", features = ["derive"] }
ed25519-dalek = "1.0.1"
env_logger = "0.10.0"
hyper = "0.14.26"
log = "0.4.17"
rand = { version = "0.7.0", features = ["getrandom", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.22"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4.1", features = ["cors"] }
